# kosmosfs

./: CMakeLists.txt  HowToCompile.md  HowToDeploy.md  KfsOverview.md  ProjectHome.md  README.txt  UsingKFSWithHadoop.md  build.xml
src/cc/chunk/: AtomicRecordAppender.cc  CMakeLists.txt  Chunk.h  ChunkManager.cc  ChunkManager.h  ChunkServer.cc  ChunkServer.h  ChunkServer_main.cc  ClientManager.cc  ClientManager.h  ClientSM.cc  ClientSM.h  KfsOps.cc  KfsOps.h  LeaseClerk.cc  LeaseClerk.h  Logger.cc  Logger.h  MetaServerSM.cc  MetaServerSM.h  RemoteSyncSM.cc  RemoteSyncSM.h  Replicator.cc  Replicator.h  Utils.cc  Utils.h  chunktrimmer_main.cc
src/cc/common/: BufferedLogWriter.cc  BufferedLogWriter.h  CMakeLists.txt  DailyRollingFileAppender.h  Version.h  config.h  hsieh_hash.cc  hsieh_hash.h  kfsdecls.h  kfstypes.h  log.cc  log.h  properties.cc  properties.h
src/cc/libkfsIO/: Acceptor.cc  Acceptor.h  BufferedSocket.cc  CMakeLists.txt  Checksum.cc  Checksum.h  Chunk.h  Counter.cc  Counter.h  DiskConnection.cc  DiskConnection.h  DiskEvent.h  DiskManager.cc  DiskManager.h  Event.h  EventManager.cc  EventManager.h  Globals.cc  Globals.h  IOBuffer.cc  IOBuffer.h  ITimeout.h  KfsCallbackObj.h  NetConnection.cc  NetConnection.h  NetKicker.cc  NetKicker.h  NetManager.cc  NetManager.h  TcpSocket.cc  TcpSocket.h  TelemetryClient.cc  TelemetryClient.h  kfsdebug.h  kfsutils.cc  kfsutils.h
src/cc/meta/: CMakeLists.txt  ChildProcessTracker.cc  ChildProcessTracker.h  ChunkReplicator.cc  ChunkReplicator.h  ChunkServer.cc  ChunkServer.h  ChunkServerFactory.cc  ChunkServerFactory.h  ClientManager.h  ClientSM.cc  ClientSM.h  LayoutManager.cc  LayoutManager.h  LeaseCleaner.h  NetDispatch.cc  NetDispatch.h  base.h  checkpoint.cc  checkpoint.h  entry.cc  entry.h  kfsops.cc  kfstree.cc  kfstree.h  kfstypes.h  logcompactor_main.cc  logger.cc  logger.h  meta.cc  meta.h  metaserver_main.cc  queue.h  replay.cc  replay.h  request.cc  request.h  restore.cc  restore.h  restoremtime_main.cc  (+5 more)
src/cc/tests/: CMakeLists.txt  KfsDirFileTester_main.cc  KfsDirScanTest_main.cc  KfsPerfReader_main.cc  KfsPerfWriter_main.cc  KfsReader_main.cc  KfsSeekWrite_main.cc  KfsTrunc_main.cc  KfsWriter_main.cc
trunk/: CMakeLists.txt  README.txt  build.xml
trunk/conf/: machines_local.cfg.sample
trunk/doc/: APPS_INT.txt  COMPILING.txt  DEPLOYING.txt  INTRO.txt  USING.txt  WHAT_IS_NEW.txt
trunk/examples/: KfsSample.java  KfsSample_main.cc
trunk/scripts/: kfsclean.sh  kfsinstall.sh  kfslaunch.py  kfsprune.py  kfsrun.sh  kfssetup.py  machines.cfg  metabkup.sh
trunk/scripts.solaris/: kfsinstall.sh  kfslaunch.py  kfsprune.py  kfsrun.sh  kfssetup.py  metabkup.sh
trunk/src/cc/access/: KfsAccessJni.cc  KfsModulePy.cc  kfs_setup.py
trunk/src/cc/chunk/: BufferManager.cc  BufferManager.h  CMakeLists.txt  Chunk.h  ChunkManager.cc  ChunkManager.h  ChunkServer.cc  ChunkServer.h  ChunkServer_main.cc  ClientManager.h  ClientSM.cc  ClientSM.h  DiskIo.h  KfsOps.cc  KfsOps.h  LeaseClerk.cc  LeaseClerk.h  Logger.cc  Logger.h  MetaServerSM.cc  MetaServerSM.h  RemoteSyncSM.cc  RemoteSyncSM.h  Replicator.cc  Replicator.h  Utils.cc  Utils.h  chunkscrubber_main.cc  chunktrimmer_main.cc
trunk/src/cc/common/: CMakeLists.txt  DailyRollingFileAppender.cc  DailyRollingFileAppender.h  buildVers.py  config.h  cxxutil.h  hsieh_hash.cc  hsieh_hash.h  kfsdecls.h  kfstypes.h  log.cc  log.h  properties.cc  properties.h
trunk/src/cc/emulator/: ChunkServerEmulator.cc  LayoutEmulator.h  rebalanceexecutor_main.cc  rebalanceplanner_main.cc  replicachecker_main.cc  rereplicator_main.cc
trunk/src/cc/fuse/: CMakeLists.txt  kfs_fuse_main.cc
trunk/src/cc/libkfsClient/: CMakeLists.txt  KfsAsyncRW.cc  KfsAttr.h  KfsClient.cc  KfsClient.h  KfsClientInt.cc  KfsClientInt.h  KfsOps.cc  KfsOps.h  KfsPendingOp.cc  KfsPendingOp.h  KfsProtocolWorker.cc  KfsProtocolWorker.h  KfsRead.cc  KfsWrite.cc  LeaseClerk.cc  LeaseClerk.h  Utils.cc  Utils.h
trunk/src/cc/libkfsIO/: Acceptor.cc  Acceptor.h  BufferedSocket.cc  BufferedSocket.h  CMakeLists.txt  Checksum.cc  Checksum.h  Chunk.h  Counter.cc  Counter.h  DiskConnection.cc  DiskConnection.h  DiskEvent.h  DiskManager.cc  DiskManager.h  Event.h  EventManager.cc  FileHandle.h  Globals.cc  Globals.h  IOBuffer.cc  IOBuffer.h  ITimeout.h  KfsCallbackObj.h  NetConnection.cc  NetConnection.h  NetErrorSimulator.cc  NetErrorSimulator.h  NetKicker.cc  NetKicker.h  NetManager.cc  NetManager.h  TcpSocket.cc  TcpSocket.h  TelemetryClient.cc  TelemetryClient.h
trunk/src/cc/meta/: CMakeLists.txt  ChunkReplicator.cc  ChunkReplicator.h  ChunkServer.cc  ChunkServer.h  ChunkServerFactory.cc  ChunkServerFactory.h  ClientManager.h  ClientSM.cc  ClientSM.h  LayoutManager.cc  LayoutManager.h  LeaseCleaner.cc  NetDispatch.h  base.h  checkpoint.cc  checkpoint.h  entry.cc  entry.h  filelister_main.cc  kfsops.cc  kfstree.h  kfstypes.h  logcompactor_main.cc  logger.cc  logger.h  meta.cc  meta.h  metaserver_main.cc  queue.h  replay.cc  replay.h  request.cc  request.h  restore.cc  restore.h  restoremtime_main.cc  startup.cc  startup.h  thread.h  (+2 more)
trunk/src/cc/qcdio/: CMakeLists.txt  qcdiskqueue.h  qcdllist.h  qciobufferpool.cpp  qcmutex.cpp  qcmutex.h  qcstutils.h  qcthread.h  qcunittest.cpp  qcutils.cpp
trunk/src/cc/telemetry/: CMakeLists.txt  telemetry_server_main.cc
trunk/src/cc/tests/: CMakeLists.txt  KfsDirFileTester_main.cc  KfsPerfReader_main.cc  KfsPerfWriter_main.cc  KfsReader_main.cc  KfsSeekWrite_main.cc  KfsTrunc_main.cc  KfsWriter_main.cc
trunk/src/cc/tools/: CMakeLists.txt  KfsAppend.cc  KfsCat_main.cc  KfsCd.cc  KfsChangeReplication.cc  KfsCp.cc  KfsCp_main.cc  KfsLs.cc  KfsLs_main.cc  KfsMkdir_main.cc  KfsMkdirs.cc  KfsMv_main.cc  KfsPing_main.cc  KfsPut_main.cc  KfsPwd.cc  KfsRm.cc  KfsRm_main.cc  KfsShell.h  KfsShell_main.cc  KfsStats_main.cc  KfsToolsCommon.h  MonUtils.cc  MonUtils.h  cpFs2Kfs_main.cc  cpKfs2Fs_main.cc  cpfromkfs_main.cc  cptokfs_main.cc  kfscp_main.cc  kfsdataverify_main.cc  kfsfileenum_main.cc  kfsping_main.cc  kfsshell_main.cc  kfsstats_main.cc  utils.cc  (+1 more)
trunk/webui/: kfsstatus.cgi  kfsstatus.py
(+808 files in other folders)
